[build-system]
requires = [
	"setuptools>=54",
	"wheel"
]
build-backend = "setuptools.build_meta"

[pytest]
collect_ignore = ["GHEtool/gui/start_gui.py"]
collect_ignore_glob = ["*start_gui.py"]
timeout = 120

[tool.pytest.ini_options]
qt_api="pyside6"

[tool.black]
line-length = 160

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true


[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:"
]
omit = ["start_gui.py"]

[tool.isort]
line_length = 160
profile = 'black'

[flake8]
per-file-ignores = "__init__.py:F401"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", 'I', 'N', 'UP', 'PL', 'NPY', 'PD', 'TRY', 'RUF', 'PLC', 'PLE', 'PLR', 'PLW']#
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", 'UP']
unfixable = []

extend-select = ["B", "Q",'C4', 'SIM', 'TCH']

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 160

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8.
target-version = "py38"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["N999"]
"translation_class.py" = ["PLR0915"]
"gui_base_class.py" = ["PLR0915"]
