[metadata]
name = ScenarioGUI
version = 0.2.2
author = Tobias Blanke
author_email = blanke@fh-aachen.de
description = Python package for a scenario based GUI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tblanke/ScenarioGUI
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    matplotlib>=3.5.2
	numpy>=1.23.1
	PySide6>=6.4.1

[options.extras_require]
GUI = pyside6>=6.4.1


[flake8]
max-line-length =160
exclude = __init__.py

[pylint]
max-line-length=160
disable=R0902

[tool:pytest]
qt_api=pyside6

